--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <pippo.version>0.6.0-SNAPSHOT</pippo.version>
+        <pippo.version>0.6.1</pippo.version>
         <slf4j.version>1.7.7</slf4j.version>
     </properties>
 
@@ -63,13 +63,13 @@
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>bootstrap</artifactId>
-            <version>3.3.1</version>
+            <version>3.3.5</version>
         </dependency>
 
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>font-awesome</artifactId>
-            <version>4.2.0</version>
+            <version>4.3.0-3</version>
         </dependency>
 
         <dependency>
